--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -108,7 +108,7 @@
                             <Label Grid.Row="2"
                                    FontSize="15"
                                    HorizontalOptions="Center"
-                                   Text="{Binding Time}"/>
+                                   Text="{Binding ParsedTime}"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
