--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -84,7 +84,7 @@
             </Grid>
             
             <!-- Hourly weather -->
-            <CollectionView Grid.Row="4" x:Name="WeatherHourly" HeightRequest="100" Margin="10" ItemsSource="{Binding HourlyWeather}">
+            <CollectionView Grid.Row="4" x:Name="WeatherHourly" HeightRequest="100" Margin="10" ItemsSource="{Binding HourlyWeather}" HorizontalOptions="Center">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout Orientation="Horizontal"
                                         ItemSpacing="10"/>
@@ -92,7 +92,7 @@
                 
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Grid.Row="4" RowDefinitions="Auto, Auto, Auto">
+                        <Grid Grid.Row="4" RowDefinitions="Auto, Auto, Auto" HorizontalOptions="Center">
                             <Image Grid.Row="0"
                                    HorizontalOptions="Center"
                                    VerticalOptions="Start"
@@ -101,7 +101,7 @@
                                    Source="{Binding Condition.ConditionIcon, StringFormat='{}https:{0}'}"/>
                             
                             <Label Grid.Row="1"
-                                   FontSize="25"
+                                   FontSize="20"
                                    HorizontalOptions="Center"
                                    Text="{Binding TemperatureC, StringFormat='{}{0}°C'}"/>
                             
