--- a/kittyweather/Pages/SettingsPage.xaml
+++ b/kittyweather/Pages/SettingsPage.xaml
@@ -31,13 +31,17 @@
             
             <Grid Grid.Row="2" ColumnDefinitions="*, *" Margin="20, 0" ColumnSpacing="20">
                 <Button Grid.Column="0"
-                    Text="Reveal API Key"/>
+                    Text="Reveal API Key"
+                    Clicked="RevealApiKey"/>
                 
                 <Button Grid.Column="1"
-                        Text="Copy API Key"/>
+                        Text="Copy API Key"
+                        Clicked="CopyApiKey"/>
             </Grid>
             
             <Label Grid.Row="3"
+                   x:Name="ApiKeyLabel"
+                   IsVisible="False"
                    Margin="20"
                    Text="api key"
                    FontSize="20"
