--- a/kittyweather/Pages/SettingsPage.xaml
+++ b/kittyweather/Pages/SettingsPage.xaml
@@ -2,7 +2,12 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:kittyweather.ViewModel"
              x:Class="kittyweather.Pages.SettingsPage">
+    
+    <ContentPage.BindingContext>
+        <viewmodel:SettingsViewModel />
+    </ContentPage.BindingContext>
     
     <ContentPage.Resources>
         <Style x:Key="settingsPageText" TargetType="Label">
@@ -48,64 +53,62 @@
                    HorizontalTextAlignment="Center"
                    />
             
+            <!-- Temperature and visibility settings -->
             <Grid Grid.Row="3" ColumnDefinitions="*, *" Margin="20" ColumnSpacing="20">
                 <Label Grid.Column="0"
                        Text="Temperature unit:"
                        FontSize="20"
                        HorizontalTextAlignment="Center"/>
                 
-                <Picker Grid.Column="0" Title="Choose Option" HorizontalTextAlignment="Center" VerticalOptions="EndAndExpand" Margin="0, 30">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>Celsius</x:String>
-                            <x:String>Fahrenheit</x:String>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
+                <Picker Grid.Column="0" 
+                        Title="Choose Option" 
+                        ItemsSource="{Binding TemperatureOptions}"
+                        SelectedItem="{Binding SelectedTemperatureUnit}"
+                        HorizontalTextAlignment="Center" 
+                        VerticalOptions="EndAndExpand" 
+                        Margin="0, 30"/>
                 
                 <Label Grid.Column="1"
                        Text="Visibility unit:"
                        FontSize="20"
                        HorizontalTextAlignment="Center"/>
                 
-                <Picker Grid.Column="1" Title="Choose Option" HorizontalTextAlignment="Center" VerticalOptions="EndAndExpand" Margin="0, 30">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>Kilometers</x:String>
-                            <x:String>Miles</x:String>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
+                <Picker Grid.Column="1" 
+                        Title="Choose Option" 
+                        ItemsSource="{Binding VisibilityOptions}"
+                        SelectedItem="{Binding SelectedVisibilityUnit}"
+                        HorizontalTextAlignment="Center" 
+                        VerticalOptions="EndAndExpand" 
+                        Margin="0, 30"/>
             </Grid>
             
+            <!-- Air pressure and precipitation settings -->
             <Grid Grid.Row="4" ColumnDefinitions="*, *" Margin="20" ColumnSpacing="20">
                 <Label Grid.Column="0"
                        Text="Air Pressure unit:"
                        FontSize="20"
                        HorizontalTextAlignment="Center"/>
                 
-                <Picker Grid.Column="0" Title="Choose Option" HorizontalTextAlignment="Center" VerticalOptions="EndAndExpand" Margin="0, 30">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>mbar</x:String>
-                            <x:String>Inches</x:String>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
+                <Picker Grid.Column="0" 
+                        Title="Choose Option" 
+                        ItemsSource="{Binding AirPressureOptions}"
+                        SelectedItem="{Binding SelectedAirPressureUnit}"
+                        HorizontalTextAlignment="Center" 
+                        VerticalOptions="EndAndExpand" 
+                        Margin="0, 30"/>
                 
                 <Label Grid.Column="1"
                        Text="Precipitation unit:"
                        FontSize="20"
                        HorizontalTextAlignment="Center"/>
                 
-                <Picker Grid.Column="1" Title="Choose Option" HorizontalTextAlignment="Center" VerticalOptions="EndAndExpand" Margin="0, 30">
-                    <Picker.ItemsSource>
-                        <x:Array Type="{x:Type x:String}">
-                            <x:String>Milimeters</x:String>
-                            <x:String>Inches</x:String>
-                        </x:Array>
-                    </Picker.ItemsSource>
-                </Picker>
+                <Picker Grid.Column="1" 
+                        Title="Choose Option" 
+                        ItemsSource="{Binding PrecipitationOptions}"
+                        SelectedItem="{Binding SelectedPrecipitationUnit}"
+                        HorizontalTextAlignment="Center" 
+                        VerticalOptions="EndAndExpand" 
+                        Margin="0, 30"/>
             </Grid>
         </Grid>
     </ScrollView>
