Implemented city search bar

--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -29,6 +29,7 @@
                    HorizontalTextAlignment="Center"
                    PlaceholderColor="Black"
                    HorizontalOptions="FillAndExpand"
+                   Completed="SearchCity"
                    Margin="20"/>
 
             
