Created "Astronomy" class

--- a/kittyweather/Pages/WeatherPage.xaml
+++ b/kittyweather/Pages/WeatherPage.xaml
@@ -245,7 +245,7 @@
                        FontSize="60" />
 
                 <Label Grid.Column="0"
-                       Text="Wind speeds"
+                       Text="Wind speed"
                        HorizontalOptions="Center"
                        VerticalOptions="End"
                        FontSize="20"/>
